--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,7 +31,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Image Source="SettingsButton.png" Margin="12,13,12,12"/>
+                            <Image x:Name="btnSettings_Image" Source="{DynamicResource Settings}" Margin="12,13,12,12"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -41,7 +41,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Image x:Name="btnSearch_Image" Source="SearchButton.png" Margin="12,13,12,12"/>
+                            <Image x:Name="btnSearch_Image" Source="{DynamicResource Search}" Margin="12,13,12,12"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -51,14 +51,14 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Image Source="NHentaiButton.png" Margin="12,13,12,12"/>
+                            <Image Source="{DynamicResource NHentai}" Margin="12,13,12,12"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
             </Button>
         </Grid>
 
-        <Grid x:Name="SettingMenu" Visibility="Hidden">
+        <Grid x:Name="SettingMenu" Visibility="Visible">
             <Grid x:Name="Settings" Margin="1060,0,0,497">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
@@ -289,16 +289,16 @@
                 </Grid.RowDefinitions>
 
                 <Label Content="Pick a Color" FontFamily="Noto Sans Bold" Foreground="{DynamicResource CurrentColor}" FontWeight="UltraBold" Margin="0,0,0,13" FontSize="24" Grid.RowSpan="1" Grid.ColumnSpan="2"/>
-                <Button x:Name="DefaultColor" Margin="34,35,4,25" Grid.ColumnSpan="1" Background="#FFEC2854" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
-                <Button x:Name="FucsiaColor" Margin="34,29,4,31" Grid.Row="1" Grid.ColumnSpan="1" Background="#FFC928EC" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
-                <Button x:Name="RedColor" Margin="34,23,4,37" Grid.Row="2" Grid.ColumnSpan="1" Background="#FFEC2828" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
-                <Button x:Name="BlueColor" Margin="34,17,4,43" Grid.Row="3" Grid.ColumnSpan="1" Background="#FF283AEC" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
-                <Button x:Name="lightBlueColor" Margin="34,11,4,49" Grid.Row="4" Background="#FF28E5EC" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
-                <Button x:Name="AquaColor" Margin="4,35,34,25" Background="#FF28EC97" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
-                <Button x:Name="GreenColor" Margin="4,29,34,31" Grid.Row="1" Background="#FF28EC28" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
-                <Button x:Name="YellowColor" Margin="4,23,34,37" Grid.Row="2" Background="#FFECDC28" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
-                <Button x:Name="OrangeColor" Margin="4,17,34,43" Grid.Row="3" Background="#FFEC9B28" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
-                <Button x:Name="PurpleColor" Margin="4,11,34,49" Grid.Row="4" Background="#FF8428EC" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
+                <Button x:Name="Default" Margin="34,35,4,25" Grid.ColumnSpan="1" Background="#FFEC2854" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
+                <Button x:Name="Fucsia" Margin="34,29,4,31" Grid.Row="1" Grid.ColumnSpan="1" Background="#FFC928EC" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
+                <Button x:Name="Red" Margin="34,23,4,37" Grid.Row="2" Grid.ColumnSpan="1" Background="#FFEC2828" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
+                <Button x:Name="Blue" Margin="34,17,4,43" Grid.Row="3" Grid.ColumnSpan="1" Background="#FF283AEC" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
+                <Button x:Name="Light_Blue" Margin="34,11,4,49" Grid.Row="4" Background="#FF28E5EC" BorderBrush="White" Click="ChangeColors" Grid.RowSpan="2"/>
+                <Button x:Name="Aqua" Margin="4,35,34,25" Background="#FF28EC97" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
+                <Button x:Name="Green" Margin="4,29,34,31" Grid.Row="1" Background="#FF28EC28" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
+                <Button x:Name="Yellow" Margin="4,23,34,37" Grid.Row="2" Background="#FFECDC28" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
+                <Button x:Name="Orange" Margin="4,17,34,43" Grid.Row="3" Background="#FFEC9B28" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
+                <Button x:Name="Purple" Margin="4,11,34,49" Grid.Row="4" Background="#FF8428EC" BorderBrush="White" Click="ChangeColors" Grid.Column="1" Grid.RowSpan="2"/>
 
             </Grid>
         </Grid>
@@ -311,14 +311,14 @@
             <TextBlock x:Name="DoujinshiCode" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="837,154,0,0" FontFamily="#Noto Sans Bold" Foreground="White" FontSize="40" TextWrapping="Wrap" Width="185" Height="56" FontWeight="Bold" LineHeight="6"/>
             <Label Content="Favourites:" FontFamily="Noto Sans Bold" Foreground="{DynamicResource CurrentColor}" FontWeight="UltraBold" Margin="685,252,289,348" FontSize="48"/>
             <TextBlock x:Name="DoujinshiFavourites" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="985,266,0,0" FontFamily="#Noto Sans Bold" Foreground="White" FontSize="40" TextWrapping="Wrap" Width="273" Height="53" FontWeight="Bold" LineHeight="6"/>
-            <Button x:Name="btnDoujinshiGo" Content="Go To Doujinshi" HorizontalAlignment="Left" Margin="713,371,0,0" VerticalAlignment="Top" Width="518" Height="88" Background="{DynamicResource CurrentColor}" Foreground="White" FontFamily="Noto Sans Bold" FontSize="60" Click="RedirectButton_Click"/>
-            <Button x:Name="btnDoujinshiDownload" Content="Download" HorizontalAlignment="Left" Margin="713,481,0,0" VerticalAlignment="Top" Width="518" Height="88" Background="{DynamicResource CurrentColor}" Foreground="White" FontFamily="Noto Sans Bold" FontSize="60" Click="SaveButton_Click"/>
+            <Button Style="{StaticResource normalButton}" x:Name="btnDoujinshiGo" Content="Go To Doujinshi" Margin="713,371,0,0" Click="RedirectButton_Click"/>
+            <Button Style="{StaticResource normalButton}" x:Name="btnDoujinshiDownload" Content="Download" Margin="713,481,0,0" Click="SaveButton_Click"/>
 
             <Button x:Name="leftPage" Cursor="Hand" Margin="370,637,874,0" Click="readPage_Click">
                 <Button.Template>
                     <ControlTemplate>
                         <Border HorizontalAlignment="Center" VerticalAlignment="Center" Height="108" Margin="0,0,0,0" Width="96">
-                            <Image Source="LeftArrow.png" Margin="12,13,12,12"/>
+                            <Image x:Name="leftArrow" Source="{DynamicResource LeftArrow}" Margin="12,13,12,12"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -328,7 +328,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border HorizontalAlignment="Center" VerticalAlignment="Center" Height="108" Margin="0,0,0,0" Width="96">
-                            <Image Source="RightArrow.png" Margin="12,13,12,12"/>
+                            <Image x:Name="rightArrow" Source="{DynamicResource RightArrow}" Margin="12,13,12,12"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -340,7 +340,7 @@
             <Button.Template>
                 <ControlTemplate>
                     <Border HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,-0" Width="186" Height="89">
-                        <Image Name="imgGithub" Source="GithubButton.png" Margin="12,13,12,12" Height="62" Width="211"/>
+                        <Image x:Name="btnGithub_Image" Source="{DynamicResource Github}" Margin="12,13,12,12" Height="62" Width="211"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template>
